[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "proof-agent"
version = "0.1.0"
description = "Adversarial verification for AI agent work"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["pyyaml>=6.0"]

[project.urls]
Homepage = "https://github.com/AndreaGriffiths11/proof-agent"
